# optimizer

./: CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: unit_tests.yml
examples/: sim_ann.cpp  swarm.cpp  var1d_func1d.cpp  var2d_func1d.cpp
src/: Data.cpp  Data.hpp  FactoryOptimizer.cpp  FactoryOptimizer.hpp  Function.hpp  Optimizer.cpp  Optimizer.hpp  Parameters.hpp  PartSwarmParams.hpp  SimAnnParams.hpp
tests/: function_1d.cpp  function_2d.cpp  tests.cpp
